first implementation of post wallet service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,6 @@ quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss.SSS} [%X{requestId}] [%p] [%c{
 
 %prod.quarkus.log.level=${wallet.quarkus-log-level}
 %prod.quarkus.log.category."it.gov.pagopa.swclient.mil.wallet".level=${wallet.app-log-level}
+
+quarkus.rest-client.session-api.url=http://localhost:9999
+quarkus.rest-client.pmwallet-api.url=http://localhost:9999
