--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,10 @@
 		</dependency>
 		<dependency>
 			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-rest-client-reactive</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.quarkus</groupId>
 			<artifactId>quarkus-junit5</artifactId>
 			<scope>test</scope>
 		</dependency>
@@ -77,6 +81,16 @@
 			<groupId>io.quarkus</groupId>
 			<artifactId>quarkus-junit5-mockito</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>it.gov.pagopa.swclient.mil</groupId>
+			<artifactId>common</artifactId>
+			<version>${common.version}</version>
+		</dependency>
+		<dependency>
+		  <groupId>io.quarkus</groupId>
+		  <artifactId>quarkus-jacoco</artifactId>
+		  <scope>test</scope>
 		</dependency>
 	</dependencies>
 	
