--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 		
 		<skipITs>true</skipITs>
 		
-		<common.version>1.0.3</common.version>
+		<common.version>1.1.5</common.version>
 	</properties>
 	
 	<dependencyManagement>
@@ -91,6 +91,11 @@
 		  <groupId>io.quarkus</groupId>
 		  <artifactId>quarkus-jacoco</artifactId>
 		  <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.jacoco</groupId> 
+		    <artifactId>jacoco-maven-plugin</artifactId>
+		    <version>0.8.6</version>
 		</dependency>
 	</dependencies>
 	
@@ -205,6 +210,37 @@
 				<skipITs>false</skipITs>
 				<quarkus.package.type>native</quarkus.package.type>
 			</properties>
+		</profile>
+		<profile>
+			<id>coverage</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<version>0.8.8</version>
+						<executions>
+							<execution>
+								<id>prepare-agent</id>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>report</id>
+								<goals>
+									<goal>report</goal>
+								</goals>
+								<configuration>
+									<formats>
+										<format>XML</format>
+									</formats>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
 	</profiles>
 </project>
