added integration tests
added postman collections

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,14 @@ quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss.SSS} [%X{requestId}] [%p] [%c{
 %prod.quarkus.log.level=${wallet.quarkus-log-level}
 %prod.quarkus.log.category."it.gov.pagopa.swclient.mil.wallet".level=${wallet.app-log-level}
 
-quarkus.rest-client.session-api.url=http://localhost:9999
-quarkus.rest-client.pmwallet-api.url=http://localhost:9999
+%dev.quarkus.rest-client.session-api.url=http://localhost:9999
+%prod.quarkus.rest-client.session-api.url=${rest-client-session-api-url}
+%test.quarkus.rest-client.session-api.url=http://localhost:9999
+
+%dev.quarkus.rest-client.pmwallet-api.url=http://localhost:9999
+%prod.quarkus.rest-client.pmwallet-api.url=${rest-client-pmwallet-api-url}
+%test.quarkus.rest-client.pmwallet-api.url=http://localhost:9999
+
+%dev.ocp.apim.subscription=bbc27c4c66a64effa786cf7e5dad3a6f
+%test.ocp.apim.subscription=bbc27c4c66a64effa786cf7e5dad3a6f
+%prod.ocp.apim.subscription=${ocp-apim-subscription}
