--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 		
 		<quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
 		<quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-		<quarkus.platform.version>2.14.3.Final</quarkus.platform.version>
+		<quarkus.platform.version>2.16.0.Final</quarkus.platform.version>
 		
 		<skipITs>true</skipITs>
 		
@@ -96,6 +96,15 @@
 		    <groupId>org.jacoco</groupId> 
 		    <artifactId>jacoco-maven-plugin</artifactId>
 		    <version>0.8.6</version>
+		</dependency>
+		<dependency>
+			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-container-image-docker</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>testcontainers</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	
