--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	
-	<groupId>it.gov.pagopa.swclient.mil</groupId>
+	<groupId>it.pagopa.swclient.mil</groupId>
 	<artifactId>wallet</artifactId>
 	<version>1.0.1-SNAPSHOT</version>
 	
@@ -23,11 +23,11 @@
 		
 		<quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
 		<quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-		<quarkus.platform.version>2.16.0.Final</quarkus.platform.version>
+		<quarkus.platform.version>3.0.2.Final</quarkus.platform.version>
 		
 		<skipITs>true</skipITs>
 		
-		<common.version>1.1.5</common.version>
+		<common.version>2.0.1</common.version>
 	</properties>
 	
 	<dependencyManagement>
@@ -83,7 +83,7 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>it.gov.pagopa.swclient.mil</groupId>
+			<groupId>it.pagopa.swclient.mil</groupId>
 			<artifactId>common</artifactId>
 			<version>${common.version}</version>
 		</dependency>
@@ -106,6 +106,10 @@
 			<artifactId>testcontainers</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>io.quarkus</groupId>
+		    <artifactId>quarkus-rest-client-reactive-jackson</artifactId>
+	    </dependency>
 	</dependencies>
 	
 	<build>
