--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	
-	<groupId>it.gov.pagopa.swclient.mil</groupId>
+	<groupId>it.pagopa.swclient.mil</groupId>
 	<artifactId>wallet</artifactId>
 	<version>1.0.1-SNAPSHOT</version>
 	
@@ -23,11 +23,11 @@
 		
 		<quarkus.platform.artifact-id>quarkus-bom</quarkus.platform.artifact-id>
 		<quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
-		<quarkus.platform.version>2.14.3.Final</quarkus.platform.version>
+		<quarkus.platform.version>3.0.2.Final</quarkus.platform.version>
 		
 		<skipITs>true</skipITs>
 		
-		<common.version>1.0.3</common.version>
+		<common.version>2.0.1</common.version>
 	</properties>
 	
 	<dependencyManagement>
@@ -65,6 +65,10 @@
 		</dependency>
 		<dependency>
 			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-rest-client-reactive</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.quarkus</groupId>
 			<artifactId>quarkus-junit5</artifactId>
 			<scope>test</scope>
 		</dependency>
@@ -78,6 +82,34 @@
 			<artifactId>quarkus-junit5-mockito</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>it.pagopa.swclient.mil</groupId>
+			<artifactId>common</artifactId>
+			<version>${common.version}</version>
+		</dependency>
+		<dependency>
+		  <groupId>io.quarkus</groupId>
+		  <artifactId>quarkus-jacoco</artifactId>
+		  <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.jacoco</groupId> 
+		    <artifactId>jacoco-maven-plugin</artifactId>
+		    <version>0.8.6</version>
+		</dependency>
+		<dependency>
+			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-container-image-docker</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>testcontainers</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>io.quarkus</groupId>
+		    <artifactId>quarkus-rest-client-reactive-jackson</artifactId>
+	    </dependency>
 	</dependencies>
 	
 	<build>
@@ -191,6 +223,37 @@
 				<skipITs>false</skipITs>
 				<quarkus.package.type>native</quarkus.package.type>
 			</properties>
+		</profile>
+		<profile>
+			<id>coverage</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<version>0.8.8</version>
+						<executions>
+							<execution>
+								<id>prepare-agent</id>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>report</id>
+								<goals>
+									<goal>report</goal>
+								</goals>
+								<configuration>
+									<formats>
+										<format>XML</format>
+									</formats>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
 		</profile>
 	</profiles>
 </project>
