--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,13 +9,25 @@ uarkus.banner.enabled=false
 quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss.SSS} [%X{requestId}] [%p] [%c{2}] %m%n
 
 %dev.quarkus.log.level=ERROR
-%dev.quarkus.log.category."it.gov.pagopa.swclient.mil.wallet".level=DEBUG
+%dev.quarkus.log.category."it.pagopa.swclient.mil.wallet".level=DEBUG
 
 %playground.quarkus.log.level=ERROR
-%playground.quarkus.log.category."it.gov.pagopa.swclient.mil.wallet".level=DEBUG
+%playground.quarkus.log.category."it.pagopa.swclient.mil.wallet".level=DEBUG
 
 %test.quarkus.log.level=ERROR
-%test.quarkus.log.category."it.gov.pagopa.swclient.mil.wallet".level=DEBUG
+%test.quarkus.log.category."it.pagopa.swclient.mil.wallet".level=DEBUG
 
 %prod.quarkus.log.level=${wallet.quarkus-log-level}
-%prod.quarkus.log.category."it.gov.pagopa.swclient.mil.wallet".level=${wallet.app-log-level}
+%prod.quarkus.log.category."it.pagopa.swclient.mil.wallet".level=${wallet.app-log-level}
+
+%dev.quarkus.rest-client.session-api.url=http://localhost:9999
+%prod.quarkus.rest-client.session-api.url=${rest-client-session-api-url}
+%test.quarkus.rest-client.session-api.url=http://localhost:9999
+
+%dev.quarkus.rest-client.pmwallet-api.url=http://localhost:9999
+%prod.quarkus.rest-client.pmwallet-api.url=${rest-client-pmwallet-api-url}
+%test.quarkus.rest-client.pmwallet-api.url=http://localhost:9999
+
+%dev.ocp.apim.subscription=bbc27c4c66a64effa786cf7e5dad3a6f
+%test.ocp.apim.subscription=bbc27c4c66a64effa786cf7e5dad3a6f
+%prod.ocp.apim.subscription=${ocp-apim-subscription}
